# ECG

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
ecg/: CMakeLists.txt
ecg/base/: types.hpp
ecg/convex_hull/: ConvexHull.cpp  ConvexHull.hpp  SimpleConvexHull.cpp  SimpleConvexHull.hpp
gpu/: CMakeLists.txt  add.cu  common.cuh  cuda_record.cu  error.cuh  hello.cu  query.cu
